Mudança no cronometro

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 CountActive = true; //
                                 CountStepper = -1; // 1 para aumentar
                                 LeadingZero = true;
-                                DisplayFormat = "A promoção acaba em %%D%% Dia(s), %%H%%:%%M%%:%%S%% horas";
+                                DisplayFormat = "A promoção acaba em %%D%% Dia(s), %%H%% horas %%M%% minutos e %%S%% segundos";
                                 FinishMessage = "A promoção não está mais disponivel"; // mensagem apos termino
                             </script>
                     <br>
