Mudança no texto do quem somos

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="col-lg-8 col-lg-offset-2 text-center">
                         <h2 class="section-heading">Segurança para você!</h2>
                         <hr class="light">
-                        <h2>A SafeGo é uma empresa de segurança especializada no monitoramento por imagens e satélite de carros de motoristas.</h2>
+                        <h2>A SafeGo é uma empresa de segurança especializada no monitoramento por imagens e satélite de carros de motoristas particulares e táxis.</h2>
                         <p>Dados apontam que uma câmera instalada em seu carro <b>diminui</b> em <b>56% as chances</b> de um furto ou um assalto à mão armada ser realizado</p>
                         <a href="#produto" class="page-scroll btn btn-default btn-xl sr-button">Quero me proteger!</a>
                     </div>
