added text bellow the contact email

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <div class="col-lg-12 text-center">
                         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                         <p><a id="email" href="mailto:contato@safego.com.br">contato@safego.com.br</a></p>
+                        <p><u>Sinta-se à vontade pra enviar-nos um email ou fale conosco no chat ao lado <i class="fa fa-arrow-right"></i></u></p>
                     </div>
                 </div>
             </div>
