--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="">
 
     <title>SafeGo - Segurança para o motorista</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,6 +61,9 @@
                         <li>
                             <a class="page-scroll" href="#contato">Contato</a>
                         </li>
+                        <li>
+                            <a class="page-scroll" href="#comentarios">Comentários</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -96,73 +101,126 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Nosso Produto</h2>
+                        <h2 class="section-heading">Nossos Produtos</h2>
                         <hr class="primary">
-                        <h2>Sistema de monitoramento de segurança por imagem</h2>
-                        <img class="img-responsive center-block" src="img/camera.png" alt="produto">
-                        <p>Imagem meramente ilustrativa.</p>
-                        
-                <div id="prod" class="container">
-                    <div class="row">
-                        <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
+                        <div id="prod" class="container">
                             <div class="panel panel-default">
-                              <div class="panel-heading">
-                                <h3 class="panel-title">Sistema de Rastreamento de Veículos</h3>
-                              </div>
-                              <div class="panel-body">
-                                <h3>Preço R$148,90 (instalação + adesão)</h3>
-                                <h3>Mensalidades R$64,50</h3>
-                                <!-- INICIO FORMULARIO BOTAO 1 PAGSEGURO -->
-<form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
-<!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-<input type="hidden" name="code" value="6AAA2826EEEEB22554643FB7EDA5B884" />
-<input type="hidden" name="iot" value="button" />
-<input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
-</form>
-<!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
-                              </div>
+  <div id="promo" class="panel-heading">
+    <h1 class="panel-title">Promoções</h1>
+  </div>
+  <div class="panel-body">
+                            <div class="row">
+                                <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
+                                    <div class="panel panel-default">
+                                      <div class="panel-heading">
+                                        <h1 class="panel-title">Sistema de Rastreamento de Veículos</h1>
+                                      </div>
+                                      <div class="panel-body">
+                                        <h3>Preço promocional:</h3>
+                                        <h3>de <strike>R$ 198,50</strike> para R$148,90 (instalação + adesão)</h3>
+                                        <h3>Mensalidade: R$64,50</h3>
+                                        <img class="img-responsive center-block" src="img/rastreador1.png" alt="produto">
+                                        <p id="imgM">Imagem meramente ilustrativa.</p>
+                                        <!-- INICIO FORMULARIO BOTAO 1 PAGSEGURO -->
+                                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
+                                        <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
+                                        <input type="hidden" name="code" value="6AAA2826EEEEB22554643FB7EDA5B884" />
+                                        <input type="hidden" name="iot" value="button" />
+                                        <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/pagamentos/205x30-comprar.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                                        </form>
+                                        <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
+                                        </div>
+                                    </div>
                             </div>
-                        </div>
                         <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
                             <div class="panel panel-default">
                               <div class="panel-heading">
-                                <h3 class="panel-title">Sistema de Rastreamento por Satélite</h3>
+                                <h1 class="panel-title">Sistema de Rastreamento por Satélite</h1>
                               </div>
                               <div class="panel-body">
-                                <h3>Preço R$168,90 (instalação + adesão)</h3>
-                                <h3>Mensalidades R$64,50</h3>
+                                <h3>Preço promocional:</h3>
+                                <h3>de <strike>R$ 225,20</strike> para R$168,90 (instalação + adesão)</h3>
+                                <h3>Mensalidade: R$64,50</h3>
+                                <img class="img-responsive center-block" src="img/rastreador2.png" alt="produto">
+                                <p id="imgM">Imagem meramente ilustrativa.</p>
                                 <!-- INICIO FORMULARIO BOTAO 2 PAGSEGURO -->
-<form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
-<!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-<input type="hidden" name="code" value="A7AB61A82B2B8243341BFF9A71075740" />
-<input type="hidden" name="iot" value="button" />
-<input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
-</form>
-<!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
+                                <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
+                                <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
+                                <input type="hidden" name="code" value="A7AB61A82B2B8243341BFF9A71075740" />
+                                <input type="hidden" name="iot" value="button" />
+                                <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/pagamentos/205x30-comprar.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                                </form>
+                                <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
                               </div>
                             </div>
                         </div> 
                         <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
                             <div class="panel panel-default">
                               <div class="panel-heading">
-                                <h3 class="panel-title">Sistema de Monitoramento por Imagens</h3>
+                                <h1 class="panel-title">Sistema de Monitoramento por Imagens</h1>
                               </div>
                               <div class="panel-body">
-                                <h3>Preço R$198,90 (instalação + adesão)</h3>
-                                <h3>Mensalidades R$69,00</h3>
-<!-- INICIO FORMULARIO BOTAO 3 PAGSEGURO -->
-<form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
-<!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-<input type="hidden" name="code" value="C3E2CA4AC4C4120114C9AFBB3130D5D0" />
-<input type="hidden" name="iot" value="button" />
-<input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
-</form>
-<!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
+                                <h3>Preço promocional:</h3>
+                                <h3>de <strike>R$ 265,20</strike> para R$198,90 (instalação + adesão)</h3>
+                                <h3>Mensalidade: R$64,50</h3>
+                                <img class="img-responsive center-block" src="img/camera.png" alt="produto">
+                                <p id="imgM">Imagem meramente ilustrativa.</p>
+                                <!-- INICIO FORMULARIO BOTAO 3 PAGSEGURO -->
+                                <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
+                                <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
+                                <input type="hidden" name="code" value="C3E2CA4AC4C4120114C9AFBB3130D5D0" />
+                                <input type="hidden" name="iot" value="button" />
+                                <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/pagamentos/205x30-comprar.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                                </form>
+                                <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
                               </div>
                             </div>
                         </div> 
                     </div>           
                 </div>
+
+     <p id="pPromo" class="text-justify">Na contratação você não paga pelo equipamento e possui assistência técnica grátis durante a vigência do plano.
+Utilizamos equipes de pronta respostas para atuarem em todo o território nacional, que são treinadas e capacitadas para realizar a recuperação no menor tempo possível.
+Objetivo
+Proteção ao veículo e maior tranquilidade, conforto e segurança para você e sua família, 24 horas por dia, 7 dias por semana.
+</p>
+                       <!-- Button trigger modal -->
+                                <button id="btnmodal"type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Especificações Gerais</button>
+
+                                <!-- Modal -->
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                  <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">Especificações Gerais</h4>
+                                      </div>
+                                      <div class="modal-body text-left">
+                                        <ul>
+                                        <li>Serviço disponível em todo território nacional</li>
+                                        <li>Rastreador em comodato, você não paga pelo equipamento</li>
+                                        <li>Utiliza tecnologia GPS e GSM/GPRS</li>
+                                        <li>Assistência técnica completa do equipamento durante o período de contrato</li>
+                                        <li>Consulta da localização do veículo de forma ilimitada no site da prestadora de serviço diretamente nos mapas da prestadora e Google Maps ou nos aplicativos
+                                        para IOS e Android com atualização da posição a cada 3 minutos</li>
+                                        <li>Bloqueio do veículo em caso de sinistro</li>
+                                        <li>Equipe de pronta resposta para atuar na recuperação em caso de sinistro</li>
+                                        <li>Posicionamento através de SMS</li>
+                                        <li>Envios de alertas via e-mail em caso de acionamento da bateria auxiliar e violação do rastreador</li>
+                                        <li>Teste de funcionamento do rastreador através da central de atendimento da prestadora</li>
+                                        <li>Visualização on-line da situação do trânsito nas principais avenidas e rodovias</li>
+                                        <li>É possível verificar o percurso do veículo nos últimos 30 dias e consultar relatórios de alertas</li>
+                                        </ul>
+
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+  </div>
+</div>
                          <h2 class="privacy text-center">
                             <script language="JavaScript">
                                 TargetDate = "10/02/2016 11:59 PM"; //verificar PM-AM
@@ -170,8 +228,8 @@
                                 CountActive = true; //
                                 CountStepper = -1; // 1 para aumentar
                                 LeadingZero = true;
-                                DisplayFormat = "A promoção acaba em %%D%% Dia(s), %%H%% horas %%M%% minutos e %%S%% segundos";
-                                FinishMessage = "A promoção não está mais disponivel"; // mensagem apos termino
+                                DisplayFormat = "As promoções acabam em %%D%% Dia(s), %%H%% horas %%M%% minutos e %%S%% segundos";
+                                FinishMessage = "As promoções não estão mais disponivel"; // mensagem apos termino
                             </script>
                     <br>
                     <script language="JavaScript" src="js/timer.js"></script>
@@ -185,7 +243,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 text-center">
-                        <h2 class="section-heading">Tire suas dúvidas!</h2>
+                        <h1 class="section-heading">Tire suas dúvidas!</h1>
                         <hr class="primary">
                         <p><b>Entre em contato com nossa equipe e tire todas as suas dúvidas</b></p>
                     </div>
@@ -196,7 +254,36 @@
                 </div>
             </div>
         </section>
-        
+        <section id="comentarios">
+                <h1 class="text-center"><b>Deixe seu comentário!</b></h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+                <div id="disqus_thread"></div>
+                <script>
+
+                /**
+                 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
+                /*
+                var disqus_config = function () {
+                    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                };
+                */
+                (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = '//safego-com-br.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                <script id="dsq-count-scr" src="//safego-com-br.disqus.com/count.js" async></script>
+                        </div>
+                    </div>
+                </div>
+        </section>
             <footer id="footer">
             <div class="container">
                 <div class="text-center" style="font-size: 14px;">Todos os direitos reservados para <b>SafeGo</b></div>
@@ -227,7 +314,6 @@
          ga('send', 'pageview');
 
         </script>
-
     </body>
 
 </html>
