Inserção dos blocos de explicação do produto
Botão Blog na nav
Texto de explicação na compra

--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
                         <li>
                             <a class="page-scroll" href="#comentarios">Comentários</a>
                         </li>
+                        <li>
+                            <a href="http://safego.com.br/blog">Blog</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
         <header>
             <div class="container">
                 <div class="row">
@@ -98,16 +100,14 @@
                 </div>
             </div>
         </header>
-
         <section class="bg-primary" id="sobre">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 text-center">
                         <h2 class="section-heading">Segurança para você!</h2>
                         <hr class="light">
-                        <h2>A SafeGo é uma empresa de segurança especializada no monitoramento por imagens e satélite de carros de motoristas particulares e táxis.</h2>
-                        <p>Dados apontam que uma câmera instalada em seu carro <b>diminui</b> em <b>56% as chances</b> de um furto ou um assalto à mão armada ser realizado</p>
-                        <a href="#produto" class="page-scroll btn btn-default btn-xl sr-button">Quero me proteger!</a>
+                        <h2>A SafeGo é uma empresa especializada na revenda dos melhores equipamentos de monitoramento por imagens via satélite para carros. Trabalhamos com os melhores produtos e preços do mercado!</h2>
+                        <a href="#produto" class="page-scroll btn btn-default btn-xl sr-button">Conheça nossos produtos</a>
                     </div>
                 </div>
             </div>
@@ -119,13 +119,27 @@
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Nossos Produtos</h2>
                         <hr class="primary">
+                        <h3 class="section-heading">Todos os nossos rastreadores contam com:</h3>
+                        <div class="container">
+                        <div class="row">
+                        <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
+                            <img class="img-responsive" src="img/BLOCO01.png">
+                        </div>
+                            <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
+                            <img class="img-responsive" src="img/BLOCO02.png">
+                        </div>
+                            <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
+                            <img class="img-responsive" src="img/BLOCO03.png">
+                        </div>
+                        </div>
+                        </div>
                         <div id="prod" class="container">
                             <div class="panel panel-default">
-  <div id="promo" class="panel-heading">
-    <h1 class="panel-title">Promoções</h1>
-  </div>
-  <div class="panel-body">
-                            <div class="row">
+                          <div id="promo" class="panel-heading">
+                            <h1 class="panel-title">Promoções</h1>
+                          </div>
+                          <div class="panel-body">
+                              <h1 id="cartao" class="text-center">Page em até 18x no cartão!</h1>
                                 <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
                                     <div class="panel panel-default">
                                       <div class="panel-heading">
@@ -192,16 +206,9 @@
                               </div>
                             </div>
                         </div> 
-                    </div>           
-                </div>
-
-     <p id="pPromo" class="text-justify">Na contratação você não paga pelo equipamento e possui assistência técnica grátis durante a vigência do plano.
-Utilizamos equipes de pronta respostas para atuarem em todo o território nacional, que são treinadas e capacitadas para realizar a recuperação no menor tempo possível.
-Objetivo
-Proteção ao veículo e maior tranquilidade, conforto e segurança para você e sua família, 24 horas por dia, 7 dias por semana.
-</p>
-                       <!-- Button trigger modal -->
-                                <button id="btnmodal"type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Especificações Gerais</button>
+                    </div>
+                                    <!-- Button trigger modal -->
+                                <button id="btnmodal"type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Especificações</button>
 
                                 <!-- Modal -->
                                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -209,7 +216,7 @@ Proteção ao veículo e maior tranquilidade, conforto e segurança para você e
                                     <div class="modal-content">
                                       <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Especificações Gerais</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Especificações Gerais dos Produtos</h4>
                                       </div>
                                       <div class="modal-body text-left">
                                         <ul>
@@ -235,6 +242,9 @@ Proteção ao veículo e maior tranquilidade, conforto e segurança para você e
                                     </div>
                                   </div>
                                 </div>
+                </div>
+
+     <p id="pPromo" class="text-justify">Assim que concluida, você receberá um e-mail com todas as informações da sua compra. Em contato com a nossa equipe, você poderá escolher onde irá retirar e instalar o produto.</p>
   </div>
 </div>
                          <h2 class="privacy text-center">
@@ -252,7 +262,6 @@ Proteção ao veículo e maior tranquilidade, conforto e segurança para você e
                                 </h2>
                         </div>
                 </div>
-            </div>
         </section>
 
         <section class="bg-primary" id="contato">
@@ -266,7 +275,7 @@ Proteção ao veículo e maior tranquilidade, conforto e segurança para você e
                     <div class="col-lg-12 text-center">
                         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                         <p><a id="email" href="mailto:contato@safego.com.br">contato@safego.com.br</a></p>
-                        <p><u>Sinta-se à vontade pra enviar-nos um email ou fale conosco no chat ao lado <i class="fa fa-arrow-right"></i></u></p>
+                        <p><u>Sinta-se à vontade pra enviar-nos um email ou fale conosco no chat ao lado <i class="fa fa-arrow-right"> (Chat 24hrs online)</i></u></p>
                     </div>
                 </div>
             </div>
