Mudança ortografica "concluída "

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 </div>
             </div>
         </nav>
+
         <header>
             <div class="container">
                 <div class="row">
@@ -244,7 +245,7 @@
                                 </div>
                 </div>
 
-     <p id="pPromo" class="text-justify">Assim que concluida, você receberá um e-mail com todas as informações da sua compra. Em contato com a nossa equipe, você poderá escolher onde irá retirar e instalar o produto.</p>
+     <p id="pPromo" class="text-justify">Assim que concluída, você receberá um e-mail com todas as informações da sua compra. Em contato com a nossa equipe, você poderá escolher onde irá retirar e instalar o produto.</p>
   </div>
 </div>
                          <h2 class="privacy text-center">
