--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <h1 class="panel-title">Promoções</h1>
                           </div>
                           <div class="panel-body">
-                              <h1 id="cartao" class="text-center">Page em até 18x no cartão!</h1>
+                              <h1 id="cartao" class="text-center">Pague em até 18x no cartão!</h1>
                                 <div class="col-md-4 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 text-center">
                                     <div class="panel panel-default">
                                       <div class="panel-heading">
