--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SafeGo - Segurança para o motorista</title>
+    <title>SafeffffGo - Segurança para o motorista</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
@@ -81,7 +81,7 @@
                             <a class="page-scroll" href="#comentarios">Comentários</a>
                         </li>
                         <li>
-                            <a href="http://safego.com.br/blog">Blog</a>
+                            <a href="http://blog.safego.com.br">Blog</a>
                         </li>
                     </ul>
                 </div>
