Changed product title

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="container-hero container">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h1>Câmera Veicular de Segurança</h1>
+                        <h1>Câmera Veicular de Segurança HD DVR</h1>
                         <h3 style="margin-top: -8px">Epecífica para motoristas independentes</h3>
                         <br>
                     </div>
